Fix long strings w/o whitespace not wrapping in the mobile interface

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -36,6 +36,7 @@
     border: none;
     padding: 0;
     display: inline-block;
+    word-wrap:break-word;
   }
 
   .replyContainer {
